src/content/docs/sdk/ios/v5/index.mdx
---
title: iOS SDK integration guide
description: Use the iOS SDK to access Adjust's features in your iOS apps
category-title: iOS SDK
slug: en/sdk/ios
sidebar-position: 2
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /en/sdk/ios/v4
---

The Adjust iOS SDK enables you to record attribution, events, and more in your iOS app. This guide shows you how to integrate the Adjust SDK with your app.

## Before you begin {#before-you-begin}

Here's what you need to do before updating to SDK v5:

1. SDK v5 supports [SDK signature verification](https://help.adjust.com/en/article/sdk-signature) natively. If you currently use the SDK signature library, you need to uninstall this first.
2. If your app targets iOS or tvOS earlier than version **12.0**, you need to update your app before you can use SDK v5.

## 1. Add the SDK to your project {#add-the-sdk-to-your-project}

To use the Adjust SDK in your iOS app, you need to add it to your Xcode project.

To add the SDK using Swift's package manager:

1. Select **File --> Swift Packages --> Add Package Dependency**
2. In the box that appears, enter the SDK's GitHub address: `https://github.com/adjust/ios_sdk`
3. Select the version of the Adjust SDK you want to use in the **Version** dropdown. Check the [releases page](https://github.com/adjust/ios_sdk/releases) for the latest version.

### Alternative installation methods {#alternative-installation-methods}

<Tabs>
<Tab title="Cocoapods" sync="cocoapods">

To add the SDK using Cocoapods, specify the version you want to use in your `Podfile`:

```rb
# Get pod from repository
pod 'Adjust', '~> 5.0.0'

# Get source directly from GitHub
pod 'Adjust', :git => 'https://github.com/adjust/ios_sdk.git', :tag => 'v5.0.0'
```

If you're using web views in your app, add the Adjust Web Bridge by adding the following:

```rb
pod 'Adjust/AdjustWebBridge', :git => 'https://github.com/adjust/ios_sdk.git', :tag => 'v5.0.0'
```

</Tab>
<Tab title="Carthage" sync="carthage">

To add the SDK using Carthage, add the following to your `Cartfile`:

```text
github "adjust/ios_sdk"
```

</Tab>
</Tabs>

## 2. Integrate the Adjust SDK {#integrate-the-adjust-sdk}

Once you've added the Adjust SDK to your `Xcode` project, you need to integrate it in your app.

Add the relevant import statements in your project files.

<Tabs>
<Tab title="Swift" sync="swift">

To import the Adjust SDK, add the following to your bridging header file:

```swift
import AdjustSdk
```

</Tab>
<Tab title="Objective-C" sync="objc">

To import the Adjust SDK, add the following to your `AppDelegate.h` file:

```objc
#import <AdjustSdk/AdjustSdk.h>
```

</Tab>
</Tabs>

## 3. Add iOS frameworks {#add-ios-frameworks}

The Adjust SDK depends on frameworks to access certain device information. To enable reading this information, add the frameworks and mark them as **optional**.

| Framework                           | Description                                                                                                                      | Notes                                                                                                         |
| ----------------------------------- | -------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------- |
| `AdSupport.framework`               | Enables access to the device's IDFA. Also enables access to LAT information on devices running iOS 14 or earlier.                | Don't add this framework if your app targets the "Kids" category.                                             |
| `AdServices.framework`              | Handles ASA attribution.                                                                                                         |                                                                                                               |
| `StoreKit.framework`                | Enables access to the SKAdNetwork framework.                                                                                     | Required to allow the Adjust SDK to handle communication with SKAdNetwork on devices running iOS 14 or later. |
| `AppTrackingTransparency.framework` | Required to allow the Adjust SDK to wrap user ATT consent dialog and access consent responses on devices running iOS 14 or later | Don't add this framework if your app targets the "Kids" category                                              |
| `WebKit.framework`                  | Enables the use of web views in your application                                                                                 | Only required if your app uses web views                                                                      |

## 4. Set up SDK signature {#set-up-sdk-signature}

SDK v5 includes the [SDK signature library](https://help.adjust.com/en/article/sdk-signature). Follow [the testing guide](/en/sdk/ios/integrations/signature-library#test-your-app) to ensure your integration works.

Signature protection is inactive by default. To enable it, you need to [enforce signature validation](https://help.adjust.com/en/article/sdk-signature#enforce-signature-validation).

## 5. (Optional) set up the Adjust Web Bridge {#set-up-web-bridge}

If your app uses web views, you must set up the Adjust Web Bridge to record activity inside the web view.

### Integrate `AdjustBridge` into your app {#integrate-adjustbridge-into-your-app}

In the Project Navigator:

1. Open the source file of your View Controller.
2. Add the `import` statement at the top of the file.
3. Add the following calls to `AdjustBridge` in the `viewDidLoad` or `viewWillAppear` method of your Web View Delegate:

<Tabs>
<Tab title="Swift" sync="swift">

```swift
import AdjustSdk

func viewWillAppear(_ animated: Bool) {
    let webView = WKWebView(frame: view.bounds)

    // add var adjustBridge: AdjustBridge? on your interface
    adjustBridge.loadWKWebViewBridge(webView)
}
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
#import "<AdjustSdk/AdjustSdk.h>"

- (void)viewWillAppear:(BOOL)animated {
    WKWebView *webView = [[WKWebView alloc] initWithFrame:self.view.bounds];

    // add @property (nonatomic, strong) AdjustBridge *adjustBridge; on your interface
    [self.adjustBridge loadWKWebViewBridge:webView];
}

// Your code here
```

</Tab>
</Tabs>

#### Integrate `AdjustBridge` into your web view {#integrate-adjustbridge-into-your-web-view}

To use the Javascript bridge in your web view, you need to configure the bridge. Add the following Javascript code to initialize the Adjust iOS web bridge:

<Tabs>
<Tab title="Javascript" sync="js">

```js
var yourAppToken = yourAppToken;
var environment = AdjustConfig.EnvironmentSandbox;
var adjustConfig = new AdjustConfig(yourAppToken, environment);
Adjust.initSdk(adjustConfig);
```

</Tab>
</Tabs>

## 5. Initialize the Adjust SDK {#initialize-the-adjust-sdk}

To initialize the Adjust SDK, you need to create a config object. This object contains configuration options that control how the Adjust SDK behaves. Pass the following arguments for a minimal setup:

-  `appToken`: Your [app's token](https://help.adjust.com/en/article/app-settings#view-your-app-token).
-  `environment`: The environment you want to run the SDK in. Set this to `ADJEnvironmentSandbox`.

To initialize the Adjust SDK with this config object:

1. Declare your config object in the `didFinishLaunching` or `didFinishLaunchingWithOptions` method of your app delegate.
2. Set the `logLevel` property on your config object to `ADJLogLevelVerbose` (verbose). You must enable verbose logging to retrieve device information.
3. Pass the config object as an argument to the `initSdk` method.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
import AdjustSdk

func application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]?) -> Bool {
        // Override point for customization after application launch.
        let yourAppToken = "{YourAppToken}"
        let environment = ADJEnvironmentSandbox
        let adjustConfig = ADJConfig(appToken: yourAppToken,
                                     environment: environment)

        Adjust.initSdk(adjustConfig)
       //...
        return true
 }
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
#import <AdjustSdk/AdjustSdk.h>

- (BOOL)application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions {
   NSString *yourAppToken = @"{YourAppToken}";
   NSString *environment = ADJEnvironmentSandbox;
   ADJConfig *adjustConfig = [[ADJConfig alloc] initWithAppToken:appToken
                                                environment:environment];
   // Your code here
   [Adjust initSdk:myAdjustConfig];
   // Your code here
   return YES;
}
```

</Tab>
<Tab title="Javascript" sync="js">

```js
var yourAppToken = yourAppToken;
var environment = AdjustConfig.EnvironmentSandbox;
var adjustConfig = new AdjustConfig(yourAppToken, environment);
Adjust.initSdk(adjustConfig);
```

</Tab>
</Tabs>

### Set up your iMessage app {#set-up-your-imessage-app}

<Callout type="important">

iMessage extensions have different bundle identifiers to apps and run in a different memory space. If you configure both with the same token, the SDK returns mixed data. You must create a separate app in the Adjust dashboard for your iMessage app and use its token when initializing the Adjust SDK.

</Callout>

If your app targets iMessage, there are some additional settings you must configure:

-  If you added the Adjust SDK from source, add the `ADJUST_IM=1` pre-processor macro to your iMessage project settings.
-  If you added the Adjust SDK as a framework, make sure to add **New Copy Files Phase** in your **Build Phases** project settings. Set the `AdjustSdkIm.framework` to be copied to the Frameworks folder.

#### Record sessions {#record-sessions}

The Adjust SDK isn't subscribed to iOS system notifications in iMessage apps. To notify the Adjust SDK when your app has entered or left the foreground, you need to call the `trackSubsessionStart` and `trackSubsessionEnd` methods.

Add a call to `trackSubsessionStart` inside your `didBecomeActiveWithConversation:` method:

<Tabs>
<Tab title="Swift" sync="swift">

```swift
func didBecomeActive(with conversation: MSConversation) {
    // Called when the extension is about to move from the inactive to active state.
    // This will happen when the extension is about to present UI.
    // Use this method to configure the extension and restore previously stored state.

    Adjust.trackSubsessionStart()
}
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
-(void)didBecomeActiveWithConversation:(MSConversation *)conversation {
    // Called when the extension is about to move from the inactive to active state.
    // This will happen when the extension is about to present UI.
    // Use this method to configure the extension and restore previously stored state.

    [Adjust trackSubsessionStart];
}
```

</Tab>
</Tabs>

Add a call to `trackSubsessionEnd` inside your `willResignActiveWithConversation:` method:

<Tabs>
<Tab title="Swift" sync="swift">

```swift
func willResignActive(with conversation: MSConversation) {
    // Called when the extension is about to move from the active to inactive state.
    // This will happen when the user dismisses the extension, changes to a different
    // conversation or quits Messages.

    // Use this method to release shared resources, save user data, invalidate timers,
    // and store enough state information to restore your extension to its current state
    // in case it is terminated later.

    Adjust.trackSubsessionEnd()
}
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
-(void)willResignActiveWithConversation:(MSConversation *)conversation {
    // Called when the extension is about to move from the active to inactive state.
    // This will happen when the user dismisses the extension, changes to a different
    // conversation or quits Messages.

    // Use this method to release shared resources, save user data, invalidate timers,
    // and store enough state information to restore your extension to its current state
    // in case it is terminated later.

    [Adjust trackSubsessionEnd];
}
```

</Tab>
</Tabs>

## 6. Configure the Adjust SDK {#configure-the-adjust-sdk}

Once you've added your config object and initialization logic, you can configure the Adjust SDK to record information about different parts of your app. Check out the [configuration reference](/en/sdk/ios/configuration) and [feature guides](/en/sdk/ios/features) to set up exactly what you want to record.

## 7. Test the Adjust SDK {#test-the-adjust-sdk}

Now that you've configured the Adjust SDK to record information about your app, it's time to test it. Adjust offers a [testing console](https://help.adjust.com/en/article/testing-console) and a [Device API](https://help.adjust.com/en/article/device-api) to help you test your app.

Follow the [testing guide](https://help.adjust.com/en/article/test-the-adjust-sdk) to make sure Adjust receives the expected values back from your app.

## 8. Build your app for production {#build-your-app-for-production}

Once you've finished your testing, you can build your app for production. To do this, you need to update your config object.

Update the following values:

-  `environment`: Set this to `ADJEnvironmentProduction`.
-  `logLevel`: Choose a [logging level](/en/sdk/ios/configuration#set-your-logging-level), or disable logging completely by passing an `allowSuppressLogLevel` argument in your config object.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
import AdjustSdk

func application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]?) -> Bool {
        // Override point for customization after application launch.
        let yourAppToken = "{YourAppToken}"
        let environment = ADJEnvironmentProduction
        let adjustConfig = ADJConfig(
            appToken: yourAppToken,
            environment: environment,
            suppressLogLevel: true)
        adjustConfig?.logLevel = ADJLogLevel.verbose
        //...
        Adjust.initSdk(adjustConfig)
       //...
        return true
}
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
#import <AdjustSdk/AdjustSdk.h>

- (BOOL)application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions {
   NSString *yourAppToken = @"{YourAppToken}";
   NSString *environment = ADJEnvironmentSandbox;
   ADJConfig *adjustConfig = [[ADJConfig alloc] initWithAppToken:appToken
                                                environment:environment
                                                suppressLogLevel:YES];
   [adjustConfig setLogLevel:ADJLogLevelVerbose];
   //...
   [Adjust initSdk:adjustConfig];
   //...
   return YES;
}
```

</Tab>
</Tabs>

You can use `Xcode`'s build flags to dynamically update your config depending on whether you create a debug build or a production build.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
func application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]?) -> Bool {
        // Override point for customization after application launch.
        let yourAppToken = "{YourAppToken}"

        #if DEBUG
        let environment = ADJEnvironmentSandbox
        let adjustConfig = ADJConfig(
            appToken: yourAppToken,
            environment: environment)
        adjustConfig?.logLevel = ADJLogLevel.verbose

        #else
        let environment = ADJEnvironmentProduction
        let adjustConfig = ADJConfig(
            appToken: yourAppToken,
            environment: environment)
        adjustConfig?.logLevel = ADJLogLevel.suppress
        #endif
        //...
        Adjust.initSdk(adjustConfig)
        //...
        return true
}
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
#import <AdjustSdk/AdjustSdk.h>

- (BOOL)application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions {
   NSString *yourAppToken = @"{YourAppToken}";

   #if DEBUG
   NSString *environment = ADJEnvironmentSandbox;
   ADJConfig *adjustConfig = [[ADJConfig alloc] initWithAppToken:appToken
                                                environment:environment];
   [adjustConfig setLogLevel:ADJLogLevelVerbose];

   #else
   NSString *environment = ADJEnvironmentProduction;
   ADJConfig *adjustConfig = [[ADJConfig alloc] initWithAppToken:appToken
                                                environment:environment];
   [adjustConfig setLogLevel:ADJLogLevelSuppress];
   #endif
   //...
   [Adjust initSdk:adjustConfig];
   //...
   return YES;
}
```

</Tab>
</Tabs>
